# palmengine

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .repomixignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  DEVELOPMENT.md  Dockerfile  EXPLORER-WIZARD.md  MIGRATION-0.10.md  MIGRATION-0.12.md  MIGRATION-0.16.md  MIGRATION-0.17.md  MIGRATION-0.18.md  MIGRATION-0.19.md  MIGRATION-0.20.md  MIGRATION-0.21.md  MIGRATION-0.22.md  MIGRATION-0.23.md  MIGRATION-0.24.md  MIGRATION-0.25.md  MIGRATION-0.30.md  MIGRATION-0.48.md  MIGRATION-0.49.md  MIGRATION-0.6.md  PHILOSOPHY.md  README.md  RELEASE-0.10.9.md  RELEASE-0.12.0.md  RELEASE-0.12.9.md  RELEASE-0.13.0.md  RELEASE-0.13.13.md  RELEASE-0.14.9.md  RELEASE-0.15.4.md  RELEASE-0.16.5.md  RELEASE-0.17.0.md  RELEASE-0.17.3.md  RELEASE-0.18.0.md  (+25 more)
.continue/mcpServers/: palm-mcp-server.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: adr.md  documentation.md  feature_request.md  task.md
.github/workflows/: publish.yml
.grok/: config.toml
.grok/skills/palm/: README.md  SKILL.md
archive/: README.md  main.py
archive/experimental/gpubatches/: palm_bench_20260606.csv  palm_bench_20260607.csv  palm_gpu_prototype.py  palm_gpu_prototype_v10.py  palm_gpu_prototype_v11.py  palm_gpu_prototype_v2.py  (+7 more)
archive/legacy-src/: core-__init__.py  core-events.py  exceptions.py  palm-__init__.py
archive/legacy-tests/: __init__.py  test_wizard_engine.py
archive/wizards/: __init__.py
ci/: Containerfile
docker/: entrypoint.sh
docs/: .gitignore  DOCKER.md  EVENT-PLANE.md  MCP.md  OPS.md  PATTERN-APPS.md  PROVIDER-APPS.md  SCOUT-0.51.6-serverctx-foldin.md  TRANSFORMS.md  VERSIONING.md  VISION-0.12.md  VISION-0.13.md  VISION-0.15.md  VISION-0.16.md  VISION-0.18-ASSIST.md  VISION-0.24.md  VISION-0.25.md  VISION-0.27.md  VISION-0.28.md  VISION-0.30.md  VISION-0.31.md  VISION-0.32.md  VISION-0.33.md  VISION-0.34.md  VISION-0.35.md  VISION-0.36.md  VISION-0.40.md  VISION-0.43.md  VISION-0.44.md  VISION-0.45.md  VISION-0.46.md  VISION-0.47.md  VISION-0.48.md  VISION-0.49.md  VISION-0.50.md  VISION-0.51.md  WORK-DRAIN.md  index.html  llms.txt  mcp-card.txt  (+4 more)
docs/adr/: 001-compositional-power-resources.md  002-pattern-apps-and-common-boundaries.md  003-provider-apps.md  004-cqrs-schemas-service-layer.md  005-service-domain-api.md  006-assist-domain.md  007-definition-revisioning.md  008-design-service.md  009-service-cqrs-contributors.md  010-prompt-state-interpolation.md  011-local-document-resources.md  012-wizard-branch-step.md  014-dashboard-definitions.md  015-technical-debt-baseline.md  016-ci-gate.md  017-import-seams.md  018-application-host-decomposition.md  019-composition-profiles.md  020-living-capabilities.md
docs/audit/: 00-baseline.txt  01-inventory.txt  02-architecture.txt  02-deferred-imports.txt  02-guard-common.txt  02-guard-core.txt  03-complexity-summary.txt  03-radon-cc-full.txt  03-radon-mi-full.txt  03-xenon.txt  04-07-summary.txt  04-autoflake.txt  04-duplicate-basenames.txt  04-placeholders.txt  04-vulture-60.txt  04-vulture-80.txt  05-adapter-gaps.txt  05-coverage-by-layer.txt  05-isolation-experiment.txt  05-tests-ci.md  06-tooling.txt  07-bandit.txt  07-pip-audit.txt  08-docs.txt  09-conventions.txt  09-cruft.txt  10-churn.txt  10-hotspots.csv  11-principle-scorecard.md  coverage.json
docs/skills/: README.md
docs/styles/: input.css  output.css
examples/: README.md  __init__.py  full_demo.py
examples/definitions/: __init__.py  analytics_dogfood.py  approval_workflow.py  coconut_npc.py  coconut_resources.py  coconut_transforms.py  compositional_demo.py  custom_step_kind_demo.py  data_ingestion.py  design_entry.py  design_proposal_demo.py  fetch_customer.py  migrate_instance_demo.py  onboard.py  operator_entry.py  parallel_demo.py  quick_wizard.py  resource_customer_wizard.py  schema_wizard.py  todo_analytics.py  todo_builder.py  transform_demo.py  transform_example.py  transform_formats.py  transform_shaping.py
palm/: __init__.py
palm/core/: __init__.py  exceptions.py  registry.py
palm/definitions/: flow.py  process.py
palm/patterns/: __init__.py  dag.py
palm/providers/: __init__.py  graphql.py  postgres.py  rest.py
palm/runtimes/: embedded.py
palm/storages/: __init__.py  filesystem.py  memory.py  mongodb.py  postgres.py
palm/utils/: __init__.py
scripts/: docs_check.py  guard_core.py  guard_deferred.py  mcp_catalog_inventory.py  sync_version.py  version_utils.py
src/palm/: __init__.py
tests/: conftest.py  fast_settings.py  test_analytics_dashboards.py  test_analytics_dogfood.py  test_analytics_exposure.py  test_analytics_host_wire.py  test_analytics_present_profiles.py  test_analytics_schema_roles.py  test_analytics_service.py  test_analytics_static.py  test_analytics_virtual.py  test_append_item_transform_0_45.py  test_application_host.py  test_application_host_cqrs.py  test_assist_app_registry.py  test_assist_complete_paths.py  test_assist_mcp_aliases.py  test_assist_menu_open.py  test_assist_open_dataset_0_40_4.py  test_assist_registry.py  test_assist_service.py  test_assist_service_routes.py  test_assistant_view.py  test_auth_middleware.py  test_behavior_tree.py  test_cli.py  test_cli_assist.py  test_cli_command_consolidation.py  test_cli_dashboard.py  test_cli_host_command.py  test_cli_host_integration.py  test_cli_job_context.py  test_cli_version.py  test_coconut_npc_flow.py  test_coconut_npc_persistence.py  test_coconut_prompt_interpolation.py  test_coconut_returning_routing.py  test_collection_actions.py  test_collection_drive.py  test_collection_edit.py  (+206 more)
tests/common/: conftest.py
tests/core/: __init__.py  conftest.py  test_behavior_tree.py  test_composite_nodes.py  test_context.py  test_event_engine.py  test_hooks.py  test_orchestration.py  test_parallel_node.py  test_state_schema.py  test_state_scoping.py  test_transform.py  test_transform_leaf.py  test_transform_purity.py
tests/helpers/: event_plane.py
tests/patterns/: test_pipeline_pattern.py  test_transform_formats.py  test_transform_shaping.py
wizards/examples/: onboard_new_ape.py
(+1291 files in other folders)
