[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "palmengine"
version = "0.47.3"
description = "Palm Engine — lightweight orchestration for multi-step transactional workflows"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "José Gabriel Gruber"},
]
keywords = [
    "palmengine",
    "palm",
    "orchestration",
    "workflow",
    "wizard",
    "behavior-tree",
    "engine",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.14.2,<3.0",
    "python-dotenv>=1.0,<2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10.0",
    "pytest-asyncio>=0.26,<2.0",
    "pytest-xdist>=3.6,<4.0",
    "pytest-cov>=5.0,<6.0",
    "ruff>=0.4,<0.5",
    "mypy>=1.10,<2.0",
    "pre-commit>=3.7,<4.0",
]
# Audit toolchain — used by `just audit` / `just complexity` / `just refactor`
# (previously referenced but undeclared, so those recipes failed on a fresh checkout — PD-007).
audit = [
    "vulture>=2.11",
    "radon>=6.0",
    "xenon>=0.9",
    "bandit>=1.7",
    "pip-audit>=2.7",
    "autoflake>=2.3",
]

[project.optional-dependencies]
cli = [
    "rich>=13.7,<14.0",
    "prompt-toolkit>=3.0.43,<4.0",
]
dev = [
    "pytest>=9.0.3,<10.0",
    "pytest-asyncio>=0.26,<2.0",
    "pytest-xdist>=3.6,<4.0",
    "ruff>=0.4,<0.5",
    "mypy>=1.10,<2.0",
    "pre-commit>=3.7,<4.0",
]
test = [
    "pytest>=9.0.3,<10.0",
    "pytest-cov>=5.0,<6.0",
    "pytest-xdist>=3.6,<4.0",
]
all = [
    "rich>=13.7,<14.0",
    "prompt-toolkit>=3.0.43,<4.0",
    "pytest>=9.0.3,<10.0",
    "pytest-cov>=5.0,<6.0",
]
postgres = []
mongodb = []
mcp = [
    "fastmcp>=3.4,<4.0",
]

[project.scripts]
palm = "palm.runtimes.cli:main"
palm-mcp = "palm.runtimes.mcp:main"

[project.urls]
Homepage = "https://palmengine.org"
Documentation = "https://github.com/JGabrielGruber/palmengine#readme"
Repository = "https://github.com/JGabrielGruber/palmengine"
Issues = "https://github.com/JGabrielGruber/palmengine/issues"
Changelog = "https://github.com/JGabrielGruber/palmengine/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/palm"]
exclude = [
    "**/node_modules/**",
]
artifacts = [
    "src/palm/runtimes/server/surfaces/ssr/studio/static/**/*",
    "src/palm/runtimes/server/surfaces/websocket/static/**/*",
    "src/palm/runtimes/server/surfaces/rest/analytics/static/**/*",

    "src/palm/runtimes/mcp/data/llms.txt",
    "src/palm/runtimes/mcp/data/mcp.txt",
    "src/palm/runtimes/mcp/data/skills/palm/**/*",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/palm/",
    "tests/",
    "examples/",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]
exclude = [
    "**/node_modules/**",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
# Wizard packages use intentional import order to avoid circular imports.
"src/palm/patterns/wizard/**" = ["I001"]

[tool.ruff.lint.isort]
known-first-party = ["palm"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "-ra -q --strict-markers"
markers = [
    "slow: multi-session, filesystem, or full CLI bootstrap (skip with --fast)",
    "integration: host/CQRS path needing full recovery wiring",
]

[tool.coverage.run]
source = ["src/palm"]

[tool.coverage.report]
# CI coverage floor (PD-008) — set just below the ~80% green-suite baseline so
# `just ci` fails on a regression without being brittle. Raise it as coverage climbs.
fail_under = 78
skip_covered = true

[tool.palm]
default_session_ttl = 3600
max_concurrent_processes = 16
data_dir = "data"
log_dir = "logs"